--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/33847413cd.js" crossorigin="anonymous"></script>
   
     <title>Github Finder</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
   </body>
