--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,19 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/33847413cd.js" crossorigin="anonymous"></script>
-  
+    <script
+      src="https://kit.fontawesome.com/33847413cd.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>Github Finder</title>
   </head>
   <body>
     <div id="root"></div>
-   
   </body>
 </html>
